test_outputs/connlist/exposure_test_with_match_expression_in_op_with_matching_pod_exposure_output.txt
0.0.0.0-255.255.255.255[External] => matching-ns/matching-workload1[Deployment] : All Connections
hello-world/workload-a[Deployment] => 0.0.0.0-255.255.255.255[External] : All Connections
hello-world/workload-a[Deployment] => matching-ns/matching-workload1[Deployment] : All Connections
matching-ns/matching-workload1[Deployment] => 0.0.0.0-255.255.255.255[External] : All Connections
matching-ns/matching-workload1[Deployment] => hello-world/workload-a[Deployment] : All Connections

Exposure Analysis Result:
Egress Exposure:
hello-world/workload-a[Deployment]         	=> 	0.0.0.0-255.255.255.255[External] : All Connections
hello-world/workload-a[Deployment]         	=> 	entire-cluster : All Connections
matching-ns/matching-workload1[Deployment] 	=> 	0.0.0.0-255.255.255.255[External] : All Connections
matching-ns/matching-workload1[Deployment] 	=> 	entire-cluster : All Connections

Ingress Exposure:
hello-world/workload-a[Deployment]         	<= 	[namespace with {{Key:env,Operator:In,Values:[env-1 env-2],}}]/[pod with {{Key:app,Operator:In,Values:[app-1 app-2],}}] : All Connections
matching-ns/matching-workload1[Deployment] 	<= 	0.0.0.0-255.255.255.255[External] : All Connections
matching-ns/matching-workload1[Deployment] 	<= 	entire-cluster : All Connections

Workloads not protected by network policies:
hello-world/workload-a[Deployment] is not protected on Egress
matching-ns/matching-workload1[Deployment] is not protected on Egress
matching-ns/matching-workload1[Deployment] is not protected on Ingress
